# mini_google

./: .gitignore  PROGRESS.md  README.md  docker-compose.yml  parse_file.py
database/: Cargo.toml  Dockerfile  README.md  initializer.sql
database/src/: main.rs
database_backend/: Cargo.toml  Dockerfile  Dockerfile_old  README.md
database_backend/data/: 100_lines_collected_data.txt
database_backend/src/: database.rs  lang_detect.rs  main.rs  web_listener.rs
frontend/: Dockerfile  README.md  build.sh  docker-compose.yml  retrieve_test.py
frontend/zola-webpage/content/: _index.md
frontend/zola-webpage/content/page1/: index.md
frontend/zola-webpage/content/page2/: index.md
frontend/zola-webpage/content/pages/: test3.md
frontend/zola-webpage/templates/: base.html  index.html
lang_detect_python/: Cargo.toml  Dockerfile  README.md  detect_example_querry.py  detect_rust_example.rs  lang_detect.py  requirements.txt
lang_detect_python/src/: lib.rs  main.rs
pagerank_database/: README.md  db_init.sql  example.txt  parser.py  queries.sql
previous_version_website/: Cargo.toml  Dockerfile  README.md  build.sh
previous_version_website/static/: index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
python-crawler/: Dockerfile  crawlers.py  main.py  requirements.txt
python-crawler/crawlers/: crawlers.py  new_crawler.py
python-crawler/database/: db_manipulator.py
python-docker/: Dockerfile  README.md  build.sh  hello.py
python_app/: Dockerfile  api_usage.py  db_manipulator.py  db_setup.py  requirements.txt  ukrainian_tokenizers_test.py
python_crawler/: Dockerfile  README.md  build.sh  crawler.py  requirements.txt  sample_output.txt  websites.txt
python_crawler/database/: elastic_manipulator.py
python_crawler/old_files/: crawlers.py  db_manipulator.py
rust-crawler/: Cargo.toml  Dockerfile  README.md  build.sh  file.txt
rust-crawler-sd/: Cargo.toml  Dockerfile  README.md  build.sh  file.txt  out.txt
rust-crawler-sd/src/: main.rs  thread_pool.rs
rust-crawler/src/: main.rs  scrape.rs  thread_pool.rs
rust-docker/: Dockerfile  README.md  build.sh
rust-lang-detection/: Cargo.toml
rust-lang-detection/src/: lib.rs
rust-pagerank/: Cargo.toml  sql_hlam.sql
rust-pagerank/src/: main.rs
rust_crawler/: Cargo.toml  Dockerfile  build.sh
rust_crawler/src/: main.rs  scrape.rs  thread_pool.rs
rust_crawler_backend/: Cargo.toml
rust_crawler_backend/src/: main.rs
rust_docker/: Cargo.toml  build.sh
rust_lang_detection/: README.md
rust_pagerank/: Cargo.toml  pagerank_graph_builder.py
rust_pagerank/src/: main.rs
rust_weighted_pagerank/src/: main.rs
site-wasm/: Cargo.toml  main.js  package-lock.json
site-wasm/src/: lib.rs
text_summarization/: bert_summarizer.py  pytexrank_test.py
url_parser_python/: db_init.sql  example2.txt  new_sql.sql  parser.py
website/: Cargo.toml  Dockerfile  README.md  Rocket.toml  build.sh  run.sh  stop.sh  test_data.json
website/mybulma/: package-lock.json  package.json
website/mybulma/css/: mystyles.css
website/mybulma/sass/: mystyles.scss
website/prev_frontend/: Dockerfile  README.md  build.sh  run.sh  stop.sh
website/prev_frontend/zola-webpage/content/: _index.md
website/prev_frontend/zola-webpage/content/page3/: index.md
website/prev_frontend/zola-webpage/templates/: base.html
website/site-wasm/: Cargo.toml  index.html
website/site-wasm/site/: index.html  index.js  package-lock.json  package.json
website/site-wasm/src/: app.rs  lib.rs
website/site-wasm/static/: .gitignore  index.html
website/src/: main.rs  tests.rs
website/static/css/: beige_theme.css  dark_theme.css  fav_theme.css
website/templates/: empty_search.html.tera  error.hbs  error.html.tera  home.hbs  home.html.tera  login.html.hbs  search.html  search.html.tera  search_result.html
(+41 files in other folders)
