[package]
name = "rust-crawler-sd"
version = "0.1.0"
authors = ["LastGenius-edu <as.andreysultanov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
select = { version = "0.5" }
