[package]
name = "rust-crawler-sd"
version = "0.1.0"
authors = ["LastGenius-edu <as.andreysultanov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
select =  "0.5" 
clap = "2.33.3"
error-chain = "0.12.4"
indicatif = "0.15.0"
futures = "0.3.6"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
