[package]
name = "rust_crawler"
version = "0.1.0"
authors = ["LastGenius-edu <as.andreysultanov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
select =  "0.5" 
clap = "2.33.3"
error-chain = "0.12.4"
indicatif = "0.15.0"
futures = "0.3.6"
snailquote = "0.3.0"

[profile.release]
debug = true
