[package]
name = "rust_rocket"
version = "0.1.0"
authors = ["Ebenezer Don <ebenezerdon.official@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates"]
