[package]
name = "rust_rocket"
version = "0.1.0"
authors = ["Daria Omelkina <odasha2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
reqwest = { version = "0.11.1", features = ["json", "blocking"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
postgres = "0.19.1"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["tera_templates"]
